fixed contrast

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -2,13 +2,13 @@ body {
   /*Sets font, font size, background colour, and text colour for the whole webpage*/
   font-family: Arial, Helvetica, serif;
   font-size: 22px;
-  background-color: #0e2020;
+  background-color: #171e26;
   color: #f6f6f2;
 }
 
 nav {
   overflow: hidden; /* hides the overflow of some tag to make it look cleaner */
-  background-color: #c2edce; /*sets nave background colour */
+  background-color: #f4f6f6; /*sets nave background colour */
   position: fixed; /*Lets nav follow along with the page and always stay at the top*/
   top: 0px; /*Sticks the nav to the top of the page */
   padding: 15px;
@@ -19,11 +19,11 @@ nav {
 }
 .nav-link {
   padding: 22px 16px;
-  color: #388087;
+  color: #171e26;
   text-decoration: none; /*Removes underline*/
 }
 .nav-link:hover {
-  background-color: #d7ffe3; /*Makes text light up a bit when hovered over*/
+  background-color: #a9b1b1; /*Makes text light up a bit when hovered over*/
 }
 header {
   /*Sets header a little ways down from nav so it looks nicer, put on
@@ -36,7 +36,7 @@ main {
 }
 #nav-name {
   /*Adds Zenith Kramp name on nav, not clickable, just looks nice */
-  color: #388087;
+  color: #171e26;
   display: inline;
   float: right;
   padding: 0px;
